🚀 Optimisation complète du portfolio
✅ CORRECTIONS TECHNIQUES:
- Fix angular.json (base href GitHub Pages)
- Correction build production
- Fix favicon et métadonnées SEO

✅ NOUVELLES FONCTIONNALITÉS:
- Service SEO complet (structured data, meta tags)
- Composant loading réutilisable
- Navigation mobile responsive
- Smooth scroll amélioré avec accessibility

✅ AMÉLIORATIONS UX/UI:
- Micro-interactions sur boutons (hover 3D)
- Animations card avec stagger
- Focus management pour accessibilité
- ARIA labels sur tous les éléments interactifs

✅ SEO & PERFORMANCE:
- Structured data JSON-LD
- Open Graph et Twitter Cards complets
- Sitemap.xml et robots.txt
- Images lazy loading
- CSS optimisé avec design tokens

✅ ACCESSIBILITÉ:
- Navigation au clavier
- Contrast et reduced-motion support
- Alt texts descriptifs
- Skip-to-content liens

Portfolio prêt pour production ! 🎯

--- a/angular.json
+++ b/angular.json
@@ -62,10 +62,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "abdellah-portfolio:build:production"
+              "buildTarget": "abdellah-portfolio:build:production"
             },
             "development": {
-              "browserTarget": "abdellah-portfolio:build:development"
+              "buildTarget": "abdellah-portfolio:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -73,7 +73,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "abdellah-portfolio:build"
+            "buildTarget": "abdellah-portfolio:build"
           }
         },
         "test": {
